# dream-developer-tool

./: .gitmodules  CMakeLists.txt  README.md
batteries/: CMakeLists.txt
batteries/plugin-import/: pluginLoader.h
batteries/request-library/: requests.h
batteries/whereami/: CMakeLists.txt  whereami.c
batteries/whereami/include/: whereami.h
core/interface/: CMakeLists.txt
core/interface/cli/: CMakeLists.txt  main.cpp
core/interface/gui/: CMakeLists.txt  package.json  vite.config.ts
core/interface/gui/src/: app.d.ts  app.html
core/interface/gui/src-tauri/: Cargo.toml  tauri.conf.json
core/interface/gui/src-tauri/src/: main.rs
core/interface/gui/src/lib/: config.ts  state.ts  types.ts
core/interface/gui/src/lib/components/: Navbar.svelte
core/interface/gui/src/lib/lang/: en.json
core/interface/gui/src/routes/: +layout.ts  +page.svelte
core/interface/gui/src/routes/discover/: +page.svelte
core/interface/gui/src/routes/list/: +page.svelte
core/interface/gui/src/routes/settings/: +layout.svelte  +page.svelte  SettingsView.svelte
core/interface/gui/src/routes/tools/: +page.svelte
core/src/: CMakeLists.txt  Core.cpp  Core.h  Helpers.h  core.cpp  core.h
core/src/calls/: CoreCalls.h  Requests.h  TarUtils.h
core/src/commands/: CoreCommands.cpp  CoreCommands.h
core/src/plugin-manager/: PluginManager.h
plugin/: Plugin.h  plugin.h
plugin/example/: ExamplePlugin.h
plugin/helpers/: CommandHelp.h  CoreCall.h  LogHelp.h
pm/: CMakeLists.txt  PackageManagerPlugin.cpp  PackageManagerPlugin.h
